[package]
edition = "2021"
name = "pg_tle_install_local_extension"
version = "0.1.0"
author = "Yogesh Sharma <sharyogi@amazon.com>"
description = "Install local extension in PostgreSQL using pg_tle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
native-tls = "0.2.10"
openssl = "0.10.41"
postgres = { version = "0.19.4" }
#postgres-native-tls = "0.5.0"
postgres-openssl = "0.5.0"

